--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "bcrypt": "^5.1.1",
     "better-sqlite3": "^11.9.1",
     "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
