--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
+    "dev:local": "GOOGLE_APPLICATION_CREDENTIALS='/Users/jeong-inhyo/Downloads/jih4855blog-477cb-firebase-adminsdk-fbsvc-f57f77e7ab.json' next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,9 +15,9 @@
     "@types/bcrypt": "^5.0.2",
     "@types/better-sqlite3": "^7.6.13",
     "bcrypt": "^5.1.1",
-    "better-sqlite3": "^11.9.1",
     "firebase": "^11.6.1",
-    "firebase-admin": "^13.3.0",
+    "firebase-admin": "^12.7.0",
+    "lucide-react": "^0.507.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
